overflow fixed

--- a/style.css
+++ b/style.css
@@ -9,7 +9,8 @@
 html,
 body {
     margin: 0;
-    overflow-x: hidden;
+    overflow-x: initial !important;
+
 
 }
 
