--- a/style_sub.css
+++ b/style_sub.css
@@ -9,7 +9,10 @@
 html,
 body {
     margin: 0;
-    overflow-x: hidden;
+
+
+    overflow-x: initial !important;
+
 
 }
 
@@ -73,7 +76,12 @@ body {
     height: 100vh;
     position: absolute;
     margin-left: 70vw;
-    margin-top: 0;
+
+    /*
+    position: -webkit-sticky;
+    position: sticky;
+    top: 10vh;
+    z-index: 1;*/
 }
 
 
